--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -2,370 +2,70 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="393dp"
-    android:layout_height="851dp"
-    android:textAlignment="center">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/daily_report_background"
+    tools:context=".view.patient.dailyreport.DailyReportActivity">
 
-<!--test-->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/headerCard"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="-20dp"
-        android:translationZ="-20dp"
-        app:cardBackgroundColor="@color/TG_blue"
-        app:cardCornerRadius="30dp"
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="351dp"
+        android:layout_height="295dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:clickable="false"
+        android:dateTextAppearance="@style/CalenderViewDateCustomText"
+        android:focusable="false"
+        android:theme="@style/CalenderViewCustom"
+        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="135dp"
-            app:srcCompat="@drawable/profile_avatar_women" />
-
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:layout_marginTop="250dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Marilyn       "
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="106dp"
-            android:layout_marginTop="100dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Patient Daily Report       "
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-    </androidx.cardview.widget.CardView>
-
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <ImageView
-        android:id="@+id/menuButton11"
-        android:layout_width="33dp"
+        android:id="@+id/imageView7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_small" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
 
     <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="43dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/imageView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gopher_logo" />
+        app:srcCompat="@drawable/profile_icon_small" />
 
-    <ScrollView
-        android:layout_width="389dp"
-        android:layout_height="519dp"
-        android:fillViewport="true"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/dailyReportFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerCard">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp">
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Reported By"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/save"
-                android:layout_width="325dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/careplan_button"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView1" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Report date"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/save" />
-
-
-            <Button
-                android:id="@+id/today_button"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="33dp"
-                android:layout_marginEnd="32dp"
-                android:backgroundTint="@color/TG_blue"
-                android:fontFamily="@font/poppins_bold"
-                android:text="today"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/white"
-                android:textSize="8sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/year"
-                app:layout_constraintTop_toBottomOf="@+id/save" />
-
-            <Spinner
-                android:id="@+id/day"
-                android:layout_width="90dp"
-                android:layout_height="34dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:paddingRight="20dp"
-                android:spinnerMode="dropdown"
-                app:layout_constraintEnd_toStartOf="@+id/month"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <Spinner
-                android:id="@+id/month"
-                android:layout_width="90dp"
-                android:layout_height="34dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="1dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:paddingRight="20dp"
-                android:spinnerMode="dropdown"
-                app:layout_constraintEnd_toStartOf="@+id/year"
-                app:layout_constraintStart_toEndOf="@+id/day"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <Spinner
-                android:id="@+id/year"
-                android:layout_width="90dp"
-                android:layout_height="34dp"
-                android:layout_marginTop="12dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:paddingRight="20dp"
-                android:spinnerMode="dropdown"
-                app:layout_constraintEnd_toStartOf="@+id/today_button"
-                app:layout_constraintStart_toEndOf="@+id/month"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="0dp"
-                android:layout_height="34dp"
-                android:layout_marginTop="164dp"
-                android:layout_marginBottom="111dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Progress Notes"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/textView4"
-                app:layout_constraintEnd_toEndOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="@+id/textView4"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/patientNnormal"
-                android:layout_width="330dp"
-                android:layout_height="94dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/rectangle"
-                android:gravity="left"
-                android:text="Patient normal, daily visit..."
-                android:textColor="@color/black_overlay"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="133dp"
-                android:layout_height="34dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Alert"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/urgentMedicalAttentionTextView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-            <TextView
-                android:id="@+id/urgentMedicalAttentionTextView"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="7dp"
-                android:background="@drawable/button_shadow_bg"
-                android:gravity="center"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Urgent Medical Attention    "
-                android:textColor="#595656"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/requiresHospitalisationTextView"
-                app:layout_constraintEnd_toEndOf="@+id/requiresHospitalisationTextView"
-                app:layout_constraintStart_toStartOf="@+id/requiresHospitalisationTextView"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/urgent_patient_status"
-                app:layout_constraintBottom_toBottomOf="@+id/urgentMedicalAttentionTextView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                app:layout_constraintStart_toStartOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/urgentMedicalAttentionTextView" />
-
-            <TextView
-                android:id="@+id/requiresHospitalisationTextView"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="9dp"
-                android:background="@drawable/button_shadow_bg"
-                android:gravity="center"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Requires Hospitalisation     "
-                android:textColor="#595656"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/notApplicableTextView"
-                app:layout_constraintEnd_toEndOf="@+id/notApplicableTextView"
-                app:layout_constraintStart_toStartOf="@+id/notApplicableTextView"
-                app:layout_constraintTop_toBottomOf="@+id/urgentMedicalAttentionTextView" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/hospital_patient_status"
-                app:layout_constraintBottom_toBottomOf="@+id/requiresHospitalisationTextView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="@+id/imageView3" />
-
-            <TextView
-                android:id="@+id/notApplicableTextView"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="9dp"
-                android:background="@drawable/button_shadow_bg"
-                android:gravity="center"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Not Applicable                       "
-                android:textColor="#595656"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/requiresHourlyAttentionTextView"
-                app:layout_constraintEnd_toEndOf="@+id/requiresHourlyAttentionTextView"
-                app:layout_constraintStart_toStartOf="@+id/requiresHourlyAttentionTextView"
-                app:layout_constraintTop_toBottomOf="@+id/requiresHospitalisationTextView" />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/forbidden_patient_status"
-                app:layout_constraintBottom_toBottomOf="@+id/notApplicableTextView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView4"
-                app:layout_constraintStart_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toTopOf="@+id/notApplicableTextView" />
-
-            <TextView
-                android:id="@+id/requiresHourlyAttentionTextView"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginBottom="14dp"
-                android:background="@drawable/button_shadow_bg"
-                android:gravity="center"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:text="Requires hourly attention    "
-                android:textColor="#595656"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/loginBtn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/notApplicableTextView" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="14dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/time_patient_status"
-                app:layout_constraintBottom_toBottomOf="@+id/requiresHourlyAttentionTextView"
-                app:layout_constraintEnd_toStartOf="@+id/loginBtn"
-                app:layout_constraintStart_toStartOf="@+id/requiresHourlyAttentionTextView"
-                app:layout_constraintTop_toTopOf="@+id/requiresHourlyAttentionTextView" />
-
-            <Button
-                android:id="@+id/loginBtn"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="78dp"
-                android:layout_marginEnd="78dp"
-                android:layout_marginBottom="40dp"
-                android:backgroundTint="@color/TG_blue"
-                android:fontFamily="@font/poppins_bold"
-                android:text="SUBMIT"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/day"
-                app:layout_constraintTop_toBottomOf="@+id/requiresHourlyAttentionTextView" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/calendarView"
+        tools:layout="@layout/fragment_daily_report" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
