--- a/app/src/main/res/layout/activity_main_page_with_menu.xml
+++ b/app/src/main/res/layout/activity_main_page_with_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/patient_profile_bg"
-    tools:context=".view.general.MainPageWithMenuActivity">
+    tools:context=".MainPageWithMenuActivity">
 
     <Button
         android:id="@+id/menu_button_main_page"
