--- a/app/src/main/res/layout/activity_upload_photo.xml
+++ b/app/src/main/res/layout/activity_upload_photo.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.general.UploadPhoto"
-    android:background="@android:color/transparent">
+    tools:context=".view.general.UploadPhoto">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/smallCard"
@@ -45,15 +44,22 @@
             android:background="@drawable/custom_background"
             android:orientation="vertical"/>
 
-        <ImageView
-            android:id="@+id/profilepic"
+<!--        <ImageView-->
+<!--            android:id="@+id/profile"-->
+<!--            android:layout_width="93dp"-->
+<!--            android:layout_height="95dp"-->
+<!--            android:layout_marginLeft="50dp"-->
+<!--            android:layout_marginTop="35dp"-->
+<!--            android:elevation="20dp"/>-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile"
             android:layout_width="93dp"
             android:layout_height="95dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="35dp"
-            android:background="@drawable/profilecircular"
-            android:elevation="20dp"
-            android:scaleType="centerCrop" />
+            app:civ_border_color="@color/gray2"
+            app:civ_border_width="2dp" />
 
         <Button
             android:id="@+id/crop"
@@ -108,6 +114,8 @@
             android:src="@drawable/gallery" />
 
         <ImageView
+
+            android:id="@+id/close"
             android:layout_width="23dp"
             android:layout_height="23dp"
             android:layout_marginLeft="345dp"
